# pigs_game

./: .gitignore  CMakeLists.txt  README.md  environment.yml  intro.map  pigs game.kdev4
.github/workflows/: cmake.yml
cmake/: FindSDL2_ttf.cmake
etc/art/: Liv.aseprite  jump-smoke.aseprite
maps/: entry_level.map  level2.map
src/: Animation.cpp  Animation.hpp  AssetsRegistry.cpp  AssetsRegistry.hpp  CMakeLists.txt  CollisionRegion.hpp  GameController.cpp  GameController.hpp  GameHandler.cpp  GameHandler.hpp  GameMap.cpp  GameMap.hpp  GameTimeHandler.cpp  GameTimeHandler.hpp  IGameCharacter.hpp  MapEditor  PigsGame  SceneScript.cpp  SceneScript.hpp  SoundHandler.cpp  SoundHandler.hpp  StateTimeout.cpp  StateTimeout.hpp  TransitionAnimation.cpp  TransitionAnimation.hpp  Vector2D.hpp  WindowShaker.cpp  WindowShaker.hpp  bitmap_font.hpp  constants.hpp  drawing.cpp  drawing.hpp  io.cpp  io.hpp  main.cc  main.cpp  map_editor.cpp  random.hpp  sdl_wrappers.cpp  sdl_wrappers.hpp
src/characters/: Cannon.cpp  Cannon.hpp  CannonBall.hpp  IGameCharacter.hpp  King.cpp  King.hpp  Liv.cpp  Liv.hpp  Pig.cpp  Pig.hpp  PigWithMatches.cpp  PigWithMatches.hpp  builder.cpp  builder.hpp
src/collision/: CollisionRegion.hpp  aabb.hpp  character_collision.cpp  character_collision.hpp  common.hpp  enums.hpp  tilemap_collision.cpp  tilemap_collision.hpp
src/cpp/: CMakeLists.txt  GameController.cpp  GameController.hpp  GameMap.hpp  SceneScript.cpp  SceneScript.hpp  SoundHandler.cpp  SoundHandler.hpp  StateTimeout.cpp  TransitionAnimation.cpp  TransitionAnimation.hpp  Vector2D.hpp  WindowShaker.hpp  bitmap_font.hpp  constants.hpp  drawing.cpp  drawing.hpp  io.cpp  io.hpp  logging.hpp  main.cpp  map_editor.cpp  pyPigs.cpp
src/cpp/characters/: CannonBall.hpp  IGameCharacter.hpp  Pig.cpp  Pig.hpp  PigWithMatches.cpp  PigWithMatches.hpp  builder.hpp
src/cpp/collision/: aabb.hpp  character_collision.hpp  tilemap_collision.cpp  tilemap_collision.hpp
src/cpp/items/: Key.cpp
src/cpp/levels/: EntryLevel.cpp  IGameLevel.hpp  PreludeLevel.cpp  PreludeLevel.hpp
src/cpp/screens/: GameScreen.cpp  GameScreen.hpp  IScreen.hpp
src/items/: Key.cpp  Key.hpp
src/levels/: EntryLevel.cpp  EntryLevel.hpp  IGameLevel.hpp  Level2.cpp  Level2.hpp  PreludeLevel.cpp  PreludeLevel.hpp
src/python/: map_editor.py
src/screens/: GameScreen.cpp  GameScreen.hpp  IScreen.hpp  TitleScreen.cpp  TitleScreen.hpp
